# berserkBalls

./: .gitignore  CMakeLists.txt  createvector.cpp  createvector.h  geometrycreator.cpp  geometrycreator.h  itsphysics.cpp  itsphysics.h  mainwindow.cpp  mainwindow.h  mainwindowform.ui  objectposition.cpp  objectposition.h  osgwidget.cpp  osgwidget.cpp 2.autosave  osgwidget.h  physicsUnitTests.cpp  sphereupdatecallback.cpp  sphereupdatecallback.h  stdtoosgadapt.cpp  stdtoosgadapt.h  thespherecreator.cpp  thespherecreator.h  worldcollisions.cpp  worldcollisions.h
